Remove the title Bio from the bio for an invited speaker

--- a/invited_bios/dorr_bio.html
+++ b/invited_bios/dorr_bio.html
@@ -20,12 +20,10 @@ href="stylesheets/github-light.css" media="screen">
 <body>
 <section class="page-header">
       <h1 class="project-name">SpLU 2020 Invited Speakers Bios</h1>
-      <h2 class="speaker">Bonnie Dorr</h2>
+      <h2 class="speaker">Bonnie J. Dorr</h2>
 </section>
 
 <section class="main-content">
-
-<h3>Bio</h3>
 
 Dr. Bonnie J. Dorr is Associate Director and Senior Research Scientist at the Florida Institute for Human and Machine Cognition (IHMC), Professor of Computer Science at both University of West Florida and University of Florida. She is also Professor Emerita at University of Maryland and former program manager at the Defense Advanced Research Projects Agency (DARPA). Her research focuses on deep language understanding and semantics, large-scale multilingual processing, and summarization. She has carried out seminal work in cross-language divergence detection, machine translation, paraphrasing and automatic evaluation metrics. Together with colleagues at IHMC, she has established a new field of Cyber-NLP, bringing together expertise at the intersection of cyber, social computing, AI, and NLP. She is a Sloan Fellow, NSF Presidential Faculty (PECASE) Fellow, and former president of the Association for Computational Linguistics, and Fellow of AAAI and ACL. In 2020, she was named by DARPA to the Information Science and Technology (ISAT) Study Group.
 
