--- a/invited_bios/pustejovsky_bio.html
+++ b/invited_bios/pustejovsky_bio.html
@@ -25,7 +25,7 @@ href="stylesheets/github-light.css" media="screen">
 
 <section class="main-content">
 
-To Be Added
+To Appear Soon
 </section>
 
 
