Add James P.'s bio

--- a/invited_bios/pustejovsky_bio.html
+++ b/invited_bios/pustejovsky_bio.html
@@ -25,7 +25,7 @@ href="stylesheets/github-light.css" media="screen">
 
 <section class="main-content">
 
-To Appear Soon
+James Pustejovsky holds the TJX Felberg Chair in Computer Science at Brandeis University, where he directs the Lab for Linguistics and Computation, and chairs both the Program in Linguistics and the Computational Linguistics MS Program. He conducts research in computational linguistics, AI, lexical semantics, multimodal dialogue systems, and the creation of multimodal resources for audio-visual analysis and interpretation.
 </section>
 
 
